--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 authors = [{ name = "kamran", email = "kamranakmal6776@gmail.com" }]
-license = { text = "MIT" }
+license = "MIT"
 name = "networksecurity"
 version = "0.1.0"
 description = "This is a machine learning project"
@@ -18,3 +18,7 @@ dependencies = [
     "streamlit>=1.52.1",
     "xgboost>=3.1.2",
 ]
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["networksecurity*"]
+
